<resources>
    <string name="app_name">Toursantara</string>

    <string name="searchbar_hint">Masukkan Username</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="menu_1">Menu 1</string>
    <string name="menu_2">Menu 2</string>
    <string name="profile_tab_title">Profile</string>
    <string name="follower_tab_title">Followers</string>
    <string name="following_tab_title">Following</string>
    <string name="fav_empty">You can save places to your favorite for fast access</string>
    <string name="favorite">Favorites</string>
    <string name="theme_header">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="key_dark_mode">dark_mode</string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="connecting">Connecting...</string>
    <string name="disconnected">Please check your internet connection</string>
    <string name="refreshing">Trying...</string>
    <string name="swipe">Swipe down to Refresh</string>
    <string name="nav_desc">Toursantara Capstone Project (C241-PS123) </string>
    <string name="dark">Dark Mode</string>
    <string name="search">Search Usename</string>
    <string name="no_data">There is no data :(</string>
    <string name="home">Home</string>


    //Login//
    <string name="LoginPage">Login</string>
    <string name="CreateAccount">Create Account</string>
    <string name="UsernameLogin">Username</string>
    <string name="PasswordLogin">Password</string>
    <string name="ButtonLogin">Login</string>
    <string name="ButtonSignUp">SignUp</string>
    <string name="TextViewLgin">don\'t have an account?</string>
    <string name="TextViewLginGoogle">or login with</string>

    //CreateAccount//

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>

    //StartActivity//

    <string name="StartText">Ready to explore beyond boundaries?</string>
    <string name="StartButton">Your Journey Starts Here</string>
    <string name="StartTitle">Tourism</string>

    <string name="details_tab_title">uhuy</string>
</resources>