<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/toscagin"
    tools:context=".view.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/white"
        app:cardElevation="40dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="31dp">

            <TextView
                android:id="@+id/LoginTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/LoginPage"
                android:fontFamily="@font/inter_bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="5dp"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/UsernameLogin"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EditTextPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/inter_medium"
                    android:hint="@string/PasswordLogin"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/blue"
                android:text="@string/ButtonLogin"
                android:fontFamily="@font/inter_medium"
                android:textSize="16sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/TextButtonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="135dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/inter_light"
                android:text="Or"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/inter_medium"
                android:text="@string/ButtonSignUp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="20dp" />



        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
