<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/toscagin"
    tools:context=".view.register.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        app:cardCornerRadius="25dp"
        android:backgroundTint="@color/white"
        app:cardElevation="40dp"
        android:background="@drawable/custom_edittext">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="19dp">

            <TextView
                android:id="@+id/TitleCreateAcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Account"
                android:fontFamily="@font/inter_bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/username"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/UsernameText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameRegisterText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:background="@drawable/custom_edittext"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EmailText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EmailRegisterText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/PasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/PasswordEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/ic_baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordRegisterText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:background="@drawable/custom_edittext"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:backgroundTint="@color/blue"
                android:text="@string/ButtonSignUp"
                android:textSize="16sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
